# gaussian_lic_ros2

./: .gitignore  CHANGELOG.md  README.md
docs/: BASELINE_DATA.md  CALIBRATION_SCHEMA.md  COMMON_ERRORS.md  DETAILED_STATUS_ARCHIVE.md  DOCKER.md  GL2_RESULTS.md  HISTORICAL_DIAGNOSTICS.md  LICENSE_POLICY.md  PORTING_NOTES.md  RELEASE_MILESTONES.md  ROADMAP.md  ROS2_SEMANTICS.md  SMOKE_TESTS.md  SPNET_RUNTIME_STATUS.md  STATUS_SCHEMA.md  UPSTREAM_INVENTORY.md  coco_lic2_inventory.md  deterministic_motioncap_preset.json  faithful_blocker_tracking_report.json  lic2_surface_inventory.md  m2dgr_faithful_tracking_report.json  native_production_preset.json  paper_completion_report.json  paper_completion_report.md  sm120_status.md  strict_data_status.json  strict_data_status.md  strict_parity_matrix.json  strict_parity_matrix_report.json  strict_parity_matrix_report.md  upstream_lock.md
run_lio/: lico_camerafixed_vs_reference_report.json  lico_vs_reference_report.json  lio_vs_reference_report.json
scripts/: analyze_estimator_observability.py  archive_strict_parity_report.py  audit_strict_data_inputs.py  (+61 more)
src/cocolic/: CMakeLists.txt  PORT_RESULTS.md  package.xml
src/cocolic/include/ros/: assert.h
src/cocolic/src/: odometry_node.cpp
src/cocolic/src/camera/: r3live.hpp  r3live_lio.cpp  r3live_slim.cpp  r3live_slim.hpp  r3live_vio.cpp
src/cocolic/src/camera/loam/: LiDAR_front_end.cpp
src/cocolic/src/camera/loam/include/: common_lib.h  matplotlibcpp.h  so3_math.h
src/cocolic/src/camera/loam/include/FOV_Checker/: FOV_Checker.cpp  FOV_Checker.h
src/cocolic/src/camera/loam/include/kd_tree/: ikd_Tree.h
src/cocolic/src/camera/optical_flow/: lkpyramid.cpp  lkpyramid.hpp
src/cocolic/src/camera/rgb_map/: image_frame.cpp  image_frame.hpp  offline_map_recorder.hpp  pointcloud_rgbd.cpp  pointcloud_rgbd.hpp  rgbmap_tracker.cpp  rgbmap_tracker.hpp
src/cocolic/src/camera/tools/: os_compatible.hpp  tools_angleaxis_ad.h  tools_ceres.hpp  tools_color_printf.hpp  tools_data_io.hpp  tools_eigen.hpp  tools_kd_hash.hpp  tools_logger.hpp  tools_mem_used.h  tools_openCV_3_to_4.hpp  tools_random.hpp  tools_ros.hpp  tools_serialization.hpp  tools_thread_pool.hpp  tools_timer.hpp
src/cocolic/src/imu/: imu_state_estimator.cpp  imu_state_estimator.h
src/cocolic/src/lidar/: lidar_feature.h  lidar_handler.cpp  lidar_handler.h  livox_feature_extraction.cpp  livox_feature_extraction.h  velodyne_feature_extraction.cpp  velodyne_feature_extraction.h
src/cocolic/src/odom/: msg_manager.cpp  msg_manager.h  odometry_manager.cpp  odometry_manager.h  odometry_viewer.h  r3live_stub.h  trajectory_estimator.cpp  trajectory_estimator.h  trajectory_manager.cpp  trajectory_manager.h
src/cocolic/src/odom/factor/: ceres_local_param.h
src/cocolic/src/odom/factor/analytic_diff/: image_feature_factor.h  lidar_feature_factor.h  marginalization_factor.cpp  marginalization_factor.h  so3_spline_view.h  split_spline_view.h  trajectory_value_factor.h
src/cocolic/src/spline/: ceres_spline_helper.h  ceres_spline_helper_jet.h  rd_spline.h  se3_spline.h  so3_spline.h  spline_segment.h  trajectory.cpp  trajectory.h
src/cocolic/src/utils/: ceres_callbacks.h  cloud_tool.h  mypcl_cloud_type.h  opt_weight.h  parameter_struct.h
src/cocolic/test/: bag_ingest_test.cpp  ingest_offset_time_test.cpp  storage_autodetect_test.cpp
src/gaussian_lic_frontend/: CMakeLists.txt  package.xml
src/gaussian_lic_frontend/scripts/: livox_custom_to_pointcloud2.py
src/gaussian_lic_frontend/src/: lic2_contract_adapter_node.cpp
src/gaussian_lic_tracking/: CMakeLists.txt  package.xml
src/gaussian_lic_tracking/include/gaussian_lic_tracking/: gaussian_snapshot.hpp  imu_preintegrator.hpp  imu_propagator.hpp  lidar_deskew.hpp  lidar_factor.hpp  sliding_window_optimizer.hpp  trajectory_manager.hpp  visual_factor.hpp
src/gaussian_lic_tracking/include/gaussian_lic_tracking/spline/: analytic_jacobians.hpp  ceres_spline_helper.hpp  continuous_time_imu_factor.hpp  continuous_time_lidar_factor.hpp  continuous_time_photometric_factor.hpp  continuous_time_sliding_window.hpp  lidar_loam_submap.hpp  lidar_plane_extractor.hpp  so3_ops.hpp  spline_common.hpp  spline_marginalization.hpp  split_spline_view.hpp  trajectory_estimator.hpp
src/gaussian_lic_tracking/src/: continuous_time_node.cpp  continuous_time_sliding_window.cpp  gaussian_snapshot.cpp  imu_preintegrator.cpp  imu_propagator.cpp  lidar_deskew.cpp  lidar_factor.cpp  sliding_window_optimizer.cpp  spline_marginalization.cpp  tracking_node.cpp  trajectory_estimator.cpp  trajectory_manager.cpp  visual_factor.cpp
src/gaussian_lic_tracking/test/: analytic_jacobians_probe.cpp  ceres_spline_helper_probe.cpp  continuous_time_imu_factor_probe.cpp  continuous_time_integration_probe.cpp  continuous_time_lidar_factor_probe.cpp  continuous_time_photometric_factor_probe.cpp  continuous_time_photometric_jacobian_probe.cpp  continuous_time_sliding_window_probe.cpp  gaussian_snapshot_probe.cpp  imu_preintegrator_probe.cpp  imu_propagator_probe.cpp  lidar_deskew_probe.cpp  lidar_factor_probe.cpp  lidar_loam_submap_probe.cpp  lidar_plane_extractor_probe.cpp  schur_complement_probe.cpp  sliding_window_bias_observability_probe.cpp  sliding_window_bias_probe.cpp  sliding_window_dense_prior_probe.cpp  sliding_window_geometric_jacobian_probe.cpp  sliding_window_gravity_estimation_probe.cpp  sliding_window_imu_bias_jacobian_probe.cpp  sliding_window_imu_kinematic_jacobian_probe.cpp  sliding_window_marginalization_probe.cpp  sliding_window_normal_equation_probe.cpp  sliding_window_optimizer_probe.cpp  sliding_window_plane_factor_probe.cpp  sliding_window_point_factor_probe.cpp  sliding_window_prior_jacobian_probe.cpp  sliding_window_schur_marginalization_probe.cpp  sliding_window_se3_photometric_factor_probe.cpp  sliding_window_smoothness_factor_probe.cpp  sliding_window_visual_factor_probe.cpp  so3_knot_jacobian_probe.cpp  so3_right_jacobian_probe.cpp  spline_marginalization_probe.cpp  trajectory_estimator_probe.cpp  trajectory_manager_probe.cpp  visual_factor_probe.cpp  visual_se3_jacobian_probe.cpp
(+192 files in other folders)
