<?xml version="1.0"?>
<package format="3">
  <name>gaussian_lic_frontend</name>
  <version>0.1.0</version>
  <description>Native ROS2 frontend boundary nodes for the Gaussian-LIC2 port.</description>
  <maintainer email="frank@example.com">Frank</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
